samples/_failures_safe/1761188583_c93453_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdc96579.c: In function ‘main’:
./samples/SAFE/__tmp_bdc96579.c:179:5: error: expected expression at end of input
  179 |     process_input(input, &
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_bdc96579.c:179:5: error: expected declaration or statement at end of input
